--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,18 +8,40 @@
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 5px;
+  width: 1px;
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--primary);
+  background: #fff0;
   border-radius: 5px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--secondary);
+  background-color: #fff0;
   border-radius: 14px;
-  border: 3px solid var(--primary);
+  border: 3px solid #fff0;
+}
+
+/* Firefox */
+.overflow-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #fff0 #fff0;
+}
+
+/* Chrome, Edge, and Safari */
+.overflow-scroll::-webkit-scrollbar {
+  width: 1px;
+}
+
+.overflow-scroll::-webkit-scrollbar-track {
+  background: #fff0;
+  border-radius: 5px;
+}
+
+.overflow-scroll::-webkit-scrollbar-thumb {
+  background-color: #fff0;
+  border-radius: 14px;
+  border: 3px solid #fff0;
 }
 
 @tailwind components;
